      to the compiz API. (LP: #201342) (LP: #901097) (LP: #1004251)
      (LP: #1037710)
    - Draft first 0.9.8.0 NEWS and bump VERSION
  * debian/patches/compiz-package-gles2.patch:
    - Remove, obsoleted by the upstream GLES work 
  * Disable plugins that don't work on pure GLES on armhf/armel:
    - bench, firepaint, mblur, showmouse, splash, showrepaint, td, widget
  
  [ Sebastien Bacher ]
  * debian/control, debian/rules: enable gles on armel and armhf

 -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Fri, 24 Aug 2012 15:12:35 +0300

compiz (1:0.9.8+bzr3319-0ubuntu3) quantal; urgency=low

  * debian/control.in:
    - Recommends python-gconf for the migration script (lp: #1041498)
  * postinst/convert-files/compiz-profile-active-Default.convert, 
    postinst/convert-files/compiz-profile-Default.convert:
    - updated to fix some key names typos in the list (lp: #1041631)

 -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 28 Aug 2012 19:50:29 +0200

compiz (1:0.9.8+bzr3319-0ubuntu2) quantal-proposed; urgency=low

  * No change rebuild against the latest metacity

 -- Robert Ancell <robert.ancell@canonical.com>  Fri, 24 Aug 2012 16:36:28 +1200

compiz (1:0.9.8+bzr3319-0ubuntu1) quantal-proposed; urgency=low

  [ Didier Roche ]
  * debian/patches/ubuntu-config.patch:
    - refresh with latest trunk
  * debian/*docs:
    - remove the TODO copy now removed upstream
  * debian/compiz-plugins.install:
    - install stackswitch, trip plugins
  * debian/rules, debian/control:
    - remove the compiz gnome-control-center key sedding through metacity.
      Compiz now directly ships them.
    - we do not need metacity-common anymore as a build-dep then
  * debian/compiz-gnome.migrations, debian/control:
    - build-dep on dh-migrations and ship gconf -> gsettings migration file

  [ Matthieu Baerts (matttbe) ]
  * Update apport hook for python3 ; thanks to Edward Donovan (LP: #1013171)

  [ Timo Jyrinki ]
  * New upstream snapshot.